# SIEs

./: .gitignore
prototype_v0/: claude.md  prototype_v0_result.md  pyproject.toml
prototype_v0/prototype/: README.md
prototype_v0/prototype/sie/: live.py  main.py  report.py  types.py
prototype_v0/prototype/sie/agents/: looper.py
prototype_v0/prototype/sie/systems/: influence.py  reputation.py  tier.py
prototype_v0/prototype/tests/: test_determinism.py  test_governance.py
prototype_v0/sie/: __main__.py  crypto.py  event_log.py  kernel.py  live.py
prototype_v0/sie/agents/: base.py  boundary.py  deceptive.py  efficient.py  naive.py  specialist.py
prototype_v0/sie/systems/: budget.py  escalation.py  sandbox.py  task.py  validation.py
