[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sie-kernel-prototype"
version = "0.1.0"
description = "SIE Kernel Prototype v0 — Deterministic governance kernel proof"
requires-python = ">=3.10"
dependencies = ["cryptography>=41.0"]

[tool.setuptools.packages.find]
include = ["sie*"]
